--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
       that the two models, logistic regression and neural networks had similar accuracy so we tested if combining the two
       models would improve our accuracy. The log loss of the model did not change much but the brackets have improved
       accuracy by an average of 2%.</p>
+  <img src = "images/finalMCPoints.PNG" alt = "MC Points">
   <br>
   <h3 class="model-header">Seeding</h3>
   <p>Upsets in basketball occur when a higher seeded team loses to a much worse team. Of the 63 games played over the course of each
