--- a/index.html
+++ b/index.html
@@ -456,6 +456,9 @@
     Balakrishnama, Suresh, and Aravind Ganapathiraju. &#147;Linear Discriminant Analysis - A Brief Tutorial.&#148; Institute for Signal and Information Processing 18 (1998): 1-8.
   </p>
   <p>
+    Jaisingh, Karan. &#147;March Madness 2019&#148;. https://github.com/kjaisingh/march-madness-2019
+  </p>
+  <p>
     Kumar, Ch Aswani. &#147;Analysis of Unsupervised Dimensionality Reduction Techniques.&#148; Comput. Sci. Inf. Syst. 6.2 (2009): 217-227.
   </p>
   <p>
@@ -465,7 +468,7 @@
     Shlens, Jonathon. &#147;A Tutorial on Principal Component Analysis.&#148; arXiv preprint arXiv:1404.1100 (2014).
   </p>
   <p>
-    Jaisingh, Karan. &#147;March Madness 2019&#148;. https://github.com/kjaisingh/march-madness-2019
+    Spackman, Kent A. &#147;Combining logistic regression and neural networks to create predictive models&#148;. Proceedings of the annual symposium on computer application in medical care. American Medical Informatics Association, 1992.
   </p>
   <p>
     Morde, Vishal. &#147;XGBoost Algorithm: Long May She Reign!&#148; Medium, Towards Data Science, 8 Apr. 2019, https://towardsdatascience.com/https-medium-com-vishalmorde-xgboost-algorithm-long-she-may-rein-edd9f99be63d.
