--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     the winner grants 63 points. While our model does predict the correct winner, it would need to perform even better to
     predict the final game.
   </p>
-
+  <img src = "images/bestBracket(124)7MCS.png" alt = "Best Bracket - Feature 7 of Pick Most Confident with Seeding">
   <h3 class="main">Future Steps</h3>
   <p>
     Our model's were trained using data that went as far back as 1985. However, the way basketball is played has changed
