adding naive bayes analysis

--- a/index.html
+++ b/index.html
@@ -345,7 +345,10 @@
   <img src = "images/finalNaiveBTA.PNG" alt = "Naive Bayes Accuracy">
   <img src = "images/finalNaiveBPoints.PNG" alt = "Naive Bayes Points">
   <p>
-    ____Insert Naive Bayes Analysis Here___
+    Even though Naive Bayes had different accuracies for all the feature sets, the points was almost all the same. Also,
+    the predictions were extremely confident in each matchup but got many of them wrong. Due to this, there didn't seem
+    to be a relationship between the accuracy and the points. This could be because of the extreme confidence in each
+    prediction. Games that might be closer to a 50% chance might end up being predicted completely wrong by this technique.
   </p>
   <h3 class="model-header">Neural Networks</h3>
   <p>Neural Networks use a multitude of different nodes that sum up a series of weights for all the features to produce an output.
