added bracket pics

--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
   </p>
   <img src = "images/finalLogTA.PNG" alt = "Logistic Regression Accuracy">
   <img src = "images/finalLogPoints.PNG" alt = "Logistic Regression Points">
+  <img src= "images/LRBest(107)8.png" alt="Best Logistic Regression Bracket">
   <p>
     ____Insert Logistic Regression Analysis Here___
   </p>
@@ -335,6 +336,7 @@
   </p>
   <img src = "images/finalRandomForTA.PNG" alt = "Random Forest Accuracy">
   <img src = "images/finalRandomFor.PNG" alt = "Random Forest Points">
+  <img src= "images/RFBest(113)7.png" alt="Best Random Forest Bracket">
   <p>
     The random forest models all seemed to have a very similar training accuracy (varying less that 1%). However, the points scored by the
     random forest model varied greatly depending on the feature set that was used. There was a general trend where, as we increased the number
@@ -349,6 +351,7 @@
   </p>
   <img src = "images/finalNaiveBTA.PNG" alt = "Naive Bayes Accuracy">
   <img src = "images/finalNaiveBPoints.PNG" alt = "Naive Bayes Points">
+  <img src= "images/NBBest(52)8.png" alt="Best Naive Bayes Bracket">
   <p>
     Even though Naive Bayes had different accuracies for all the feature sets, the points was almost all the same. Also,
     the predictions were extremely confident in each matchup but got many of them wrong. Due to this, there didn't seem
@@ -360,6 +363,7 @@
   </p>
   <img src = "images/finalNeuralNetTA.PNG" alt = "Neural Network Accuracy">
   <img src = "images/finalNeuralNetPoints.PNG" alt = "Neural Network Points">
+  <img src= "images/NNBest(119)2.png" alt="Best Neural Network Bracket">
   <p>
     ____Insert Neural Networks Analysis Here___
   </p>
@@ -370,7 +374,9 @@
       best models to use when using machine learning to generate predictions. This is due to XGBoost's build-in cross validation and it's
       use of both LASSO and Ridge regression to prevent overfitting.
     </p>
+    <img src = "images/finalXGBTA.PNG" alt = "XGB Points">
     <img src = "images/finalXGBPoints.PNG" alt = "XGB Points">
+    <img src= "images/XGBBest(119)2.png" alt="Best XGB Bracket">
   <p>
     While our XGBoosting models were all able to perform very well in the training, they tended to perform towards the middle of the
     pack when generating a bracket for the 2019 March Madness competition. We believe this might be due to the fact that we train and test
@@ -391,6 +397,7 @@
     The log loss of the model did not change much but the brackets had their accuracy improved by an average of 2% when our pick most
     confident model was used.</p>
   <img src = "images/finalMCPoints.PNG" alt = "MC Points">
+  <img src= "images/MCBest(116)3.png" alt="Best MC Bracket">
   <br>
   <h3 class="model-header">Seeding</h3>
   <p>Upsets in basketball occur when a higher seeded team loses to a much worse team. Of the 63 games played over the course of each
