added graph for all

--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@
     predict the final game.
   </p>
   <img src = "images/bestBracket(124)7MCS.png" alt = "Best Bracket - Feature 7 of Pick Most Confident with Seeding">
+  <img src= "images/finalAllModelPoints.png" alt="Highest Points for Each Model">
   <h3 class="main">Future Steps</h3>
   <p>
     Our model's were trained using data that went as far back as 1985. However, the way basketball is played has changed
