Added bar chart of best results that Ji Won added. I think I accidentally removed during my last commit/merge

--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
     even though it predicted many of them incorrectly. Random Forests consistently performed worse than both Neural Networks and
     Logistic Regression but better than Naive Bayes.
   </p>
+  <img src= "images/finalAllModelPoints.png" alt="Highest Points for Each Model">
   <p>
     Our 5 best brackets all scored 120 points or above which was far above the 2018 average of 57 points and in addition,
     36 of our 96 brackets reached our target and scored over 100 points. Our best bracket, using Pick Most Confident and
