analysis for logistic regression

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
   <img src = "images/finalLogPoints.PNG" alt = "Logistic Regression Points">
   <img src= "images/LRBest(107)8.png" alt="Best Logistic Regression Bracket">
   <p>
-    ____Insert Logistic Regression Analysis Here___
+  The training accuracies for our Logistic Regression model were all within the range of 0.765 and 0.775, meaning they varied by 1%. However, when we look at the points scored by the predictions made by the model, we quickly discover that certain features may impact the performance greatly as observed by the large difference in points earned between features sets 2 and 7 versus the rest of the feature sets. We noticed that feature set 7 includes all features but 1 of feature set 2, which could mean that certain mutual features in set 7 and set 2 in particular may lead the model to a bad conclusion. However, we also noticed that feature set 8, which includes all features of set 7 in addition to other features, perform just as well as the other models, scoring 107 points and the highest score for Logistic Regression. It might be that certain features that is feature set 8 but not in 2 and 7 may be significantly helpful in predicting the bracket for logistic regression.
   </p>
   <h3 class="model-header">Random Forests</h3>
   <p>Random Forests is an ensemble method performed by bagging multiple random decision trees.  Bagging combines multiple decision trees
